<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_clear_stack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/clear_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_peek_stack"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textSize"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@+id/textTop"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTop" />

    <TextView
        android:id="@+id/sizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/text_size"
        app:layout_constraintBaseline_toBaselineOf="@+id/textSize"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/val1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/val2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/val2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:gravity="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/label1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/val3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/border"
        android:gravity="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/label2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/val4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:gravity="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/label3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/val5" />

    <TextView
        android:id="@+id/val5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/border"
        android:gravity="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/label4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_push"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/push_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/val1" />

    <EditText
        android:id="@+id/editValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="272dp"
        android:ems="10"
        android:hint="@string/enter_value"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_push"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/val1" />

    <Button
        android:id="@+id/button_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/pop_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_push" />

    <Button
        android:id="@+id/button_peek_stack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:text="@string/peek_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_pop"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textTop"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:gravity="center"
        android:background="@drawable/border"
        app:layout_constraintBaseline_toBaselineOf="@+id/topLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/topLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_0"
        app:layout_constraintEnd_toStartOf="@+id/val1"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label1" />

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/text_1"
        app:layout_constraintEnd_toStartOf="@+id/val2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/text_2"
        app:layout_constraintEnd_toStartOf="@+id/val3"
        app:layout_constraintTop_toBottomOf="@+id/label3" />

    <TextView
        android:id="@+id/label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/text_3"
        app:layout_constraintEnd_toStartOf="@+id/val4"
        app:layout_constraintTop_toBottomOf="@+id/label4" />

    <TextView
        android:id="@+id/label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/text_4"
        app:layout_constraintEnd_toStartOf="@+id/val5"
        app:layout_constraintTop_toBottomOf="@+id/textSize" />
</androidx.constraintlayout.widget.ConstraintLayout>